Style: fixed checkmark indicator alignment

--- a/src/components/Checkbox/styles.css
+++ b/src/components/Checkbox/styles.css
@@ -57,8 +57,8 @@
   
   /* Style the checkmark/indicator */
   .container .checkmark:after {
-    left: 9px;
-    top: 5px;
+    left: 6.5px;
+    top: 2.5px;
     width: 5px;
     height: 10px;
     border: solid white;
